Added Happ to supported clients.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -559,6 +559,10 @@
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>Streisand</span>
                             </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Happ</span>
+                            </div>
                         </td>
                         <td>
                             <button title="Display QR code"
@@ -665,6 +669,10 @@
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>Streisand</span>
                             </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Happ</span>
+                            </div>
                         </td>
                         <td>
                             <button title="Display QR code"
@@ -726,6 +734,10 @@
                             <div>
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>Streisand</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Happ</span>
                             </div>
                         </td>
                         <td>
@@ -838,6 +850,10 @@
                             <div>
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>Streisand</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Happ</span>
                             </div>
                         </td>
                         <td>
