--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=autorenew,content_copy,download,fingerprint,key_vertical,open_in_new,qr_code,settings,share,terminal,tune,verified,visibility,visibility_off&display=block" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=autorenew,check_circle,content_copy,download,fingerprint,info,key_vertical,open_in_new,qr_code,settings,share,terminal,tune,verified,visibility,visibility_off&display=block" />
     __STYLE__
 </head>
 
@@ -24,7 +24,12 @@
         <form id="configForm" class="configForm" onsubmit="updateSettings(event)">
             <details class="details">
                 <summary>
-                    <h3>VLESS - Trojan</h3>
+                    <h3>VLESS - Trojan
+                        <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/configuration/vless-trojan/"
+                            target="_blank" title="Help">
+                            <span class="material-symbols-rounded">info</span>
+                        </a>
+                    </h3>
                 </summary>
                 <div class="section">
                     <div class="form-control">
@@ -196,7 +201,12 @@
             </details>
             <details>
                 <summary>
-                    <h3>Fragment</h3>
+                    <h3>Fragment
+                        <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/configuration/fragment/"
+                            target="_blank" title="Help">
+                            <span class="material-symbols-rounded">info</span>
+                        </a>
+                    </h3>
                 </summary>
                 <div class="section">
                     <div class="form-control">
@@ -233,7 +243,12 @@
             </details>
             <details>
                 <summary>
-                    <h3>Warp General</h3>
+                    <h3>Warp General
+                        <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/configuration/warp/" target="_blank"
+                            title="Help">
+                            <span class="material-symbols-rounded">info</span>
+                        </a>
+                    </h3>
                 </summary>
                 <div class="section">
                     <div class="form-control">
@@ -284,7 +299,12 @@
             </details>
             <details>
                 <summary>
-                    <h3>Warp PRO</h3>
+                    <h3>Warp PRO
+                        <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/configuration/warp-pro/"
+                            target="_blank" title="Help">
+                            <span class="material-symbols-rounded">info</span>
+                        </a>
+                    </h3>
                 </summary>
                 <div class="section">
                     <div class="container">
@@ -369,7 +389,12 @@
             </details>
             <details>
                 <summary>
-                    <h3>Routing Rules</h3>
+                    <h3>Routing Rules
+                        <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/configuration/routing-rules/"
+                            target="_blank" title="Help">
+                            <span class="material-symbols-rounded">info</span>
+                        </a>
+                    </h3>
                 </summary>
                 <div class="section">
                     <div class="container">
@@ -508,7 +533,7 @@
             </details>
             <div id="apply" class="form-control apply">
                 <button type="submit" id="applyButton" class="button disabled apply-settings" form="configForm">
-                    Apply Settings 💥
+                    Apply <span class="material-symbols-rounded">check_circle</span>
                 </button>
                 <button type="button" class="panel-settings" title="Reset panel settings to default"
                     onclick="resetSettings()">
@@ -529,7 +554,12 @@
         <h2><span class="material-symbols-rounded">share</span> Subscriptions - Configs</h2>
         <details>
             <summary>
-                <h3>Normal</h3>
+                <h3>Normal
+                    <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/usage/normal/" target="_blank"
+                        title="Help">
+                        <span class="material-symbols-rounded">info</span>
+                    </a>
+                </h3>
             </summary>
             <div class="table-container">
                 <table id="full-normal-configs-table">
@@ -639,7 +669,12 @@
         </details>
         <details>
             <summary>
-                <h3>Fragment</h3>
+                <h3>Fragment
+                    <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/usage/fragment/" target="_blank"
+                        title="Help">
+                        <span class="material-symbols-rounded">info</span>
+                    </a>
+                </h3>
             </summary>
             <div class="table-container">
                 <table id="frag-sub-table">
@@ -713,7 +748,12 @@
         </details>
         <details>
             <summary>
-                <h3>Warp</h3>
+                <h3>Warp
+                    <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/usage/warp/" target="_blank"
+                        title="Help">
+                        <span class="material-symbols-rounded">info</span>
+                    </a>
+                </h3>
             </summary>
             <div class="table-container">
                 <table id="warp-configs-table">
@@ -829,7 +869,12 @@
         </details>
         <details>
             <summary>
-                <h3>Warp PRO</h3>
+                <h3>Warp PRO
+                    <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/usage/warp-pro/" target="_blank"
+                        title="Help">
+                        <span class="material-symbols-rounded">info</span>
+                    </a>
+                </h3>
             </summary>
             <div class="table-container">
                 <table id="warp-pro-configs-table">
