Pruned legacy apps, updated UI.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=autorenew,check_circle,content_copy,download,fingerprint,info,key_vertical,open_in_new,qr_code,settings,share,terminal,tune,verified,visibility,visibility_off&display=block" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add_circle,autorenew,check_circle,content_copy,delete,download,fingerprint,info,key_vertical,open_in_new,qr_code,settings,share,terminal,tune,verified,visibility,visibility_off&display=block" />
     __STYLE__
 </head>
 
@@ -309,18 +309,9 @@
                 <div class="section">
                     <div class="container">
                         <div class="section">
-                            <h4><span class="material-symbols-rounded">tune</span> MahsaNG - Hiddify</h4>
+                            <h4><span class="material-symbols-rounded">tune</span> MahsaNG Noise</h4>
                             <div class="form-control">
-                                <label for="hiddifyNoiseMode">😵‍💫 Hiddify Mode</label>
-                                <div>
-                                    <input type="text" id="hiddifyNoiseMode" name="hiddifyNoiseMode"
-                                        pattern="^(m[1-6]|h_[0-9A-Fa-f]{2}|g_([0-9A-Fa-f]{2}_){2}[0-9A-Fa-f]{2})$"
-                                        title="Enter 'm1-m6', 'h_HEX', 'g_HEX_HEX_HEX' which HEX can be between 00 to ff"
-                                        required>
-                                </div>
-                            </div>
-                            <div class="form-control">
-                                <label for="knockerNoiseMode">😵‍💫 MahsaNG Mode</label>
+                                <label for="knockerNoiseMode">😵‍💫 Mode</label>
                                 <div>
                                     <input type="text" id="knockerNoiseMode" name="knockerNoiseMode"
                                         pattern="^(none|quic|random|[0-9A-Fa-f]+)$"
@@ -329,7 +320,7 @@
                                 </div>
                             </div>
                             <div class="form-control">
-                                <label for="noiseCountMin">🎚️ Noise Count</label>
+                                <label for="noiseCountMin">🎚️ Count</label>
                                 <div class="min-max">
                                     <input type="number" id="noiseCountMin" name="noiseCountMin" min="1" required>
                                     <span>-</span>
@@ -337,7 +328,7 @@
                                 </div>
                             </div>
                             <div class="form-control">
-                                <label for="noiseSizeMin">📏 Noise Size</label>
+                                <label for="noiseSizeMin">📏 Size</label>
                                 <div class="min-max">
                                     <input type="number" id="noiseSizeMin" name="noiseSizeMin" min="1" required>
                                     <span>-</span>
@@ -345,7 +336,7 @@
                                 </div>
                             </div>
                             <div class="form-control">
-                                <label for="noiseDelayMin">🕞 Noise Delay</label>
+                                <label for="noiseDelayMin">🕞 Delay</label>
                                 <div class="min-max">
                                     <input type="number" id="noiseDelayMin" name="noiseDelayMin" min="1" required>
                                     <span>-</span>
@@ -356,16 +347,16 @@
                     </div>
                     <div class="container">
                         <div class="section">
-                            <h4><span class="material-symbols-rounded">tune</span> Clash - Amnezia</h4>
+                            <h4><span class="material-symbols-rounded">tune</span> Clash - Amnezia Noise</h4>
                             <div class="form-control">
-                                <label for="amneziaNoiseCount">🎚️ Noise Count</label>
+                                <label for="amneziaNoiseCount">🎚️ Count</label>
                                 <div>
                                     <input type="number" id="amneziaNoiseCount" name="amneziaNoiseCount" min="1"
                                         required>
                                 </div>
                             </div>
                             <div class="form-control">
-                                <label for="amneziaNoiseSizeMin">📏 Noise Size</label>
+                                <label for="amneziaNoiseSizeMin">📏 Size</label>
                                 <div class="min-max">
                                     <input type="number" id="amneziaNoiseSizeMin" name="amneziaNoiseSizeMin" min="1"
                                         required>
@@ -378,9 +369,9 @@
                     </div>
                     <div id="udp-noise-container" class="container">
                         <div class="header-container">
-                            <h4><span class="material-symbols-rounded">tune</span> v2rayNG - v2rayN</h4>
+                            <h4><span class="material-symbols-rounded">tune</span> v2rayNG - v2rayN Noise</h4>
                             <button type="button" class="add-noise" onclick="addUdpNoise(true)">
-                                <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+                                <span class="material-symbols-rounded">add_circle</span>
                             </button>
                         </div>
                         <div id="noises" class="section"></div>
@@ -551,7 +542,7 @@
         </form>
     </div>
     <div class="form-container container">
-        <h2><span class="material-symbols-rounded">share</span> Subscriptions - Configs</h2>
+        <h2><span class="material-symbols-rounded">share</span> Subscriptions</h2>
         <details>
             <summary>
                 <h3>Normal
@@ -563,10 +554,6 @@
             </summary>
             <div class="table-container">
                 <table id="full-normal-configs-table">
-                    <tr>
-                        <th>Application</th>
-                        <th>Subscription</th>
-                    </tr>
                     <tr>
                         <td>
                             <div>
@@ -678,10 +665,6 @@
             </summary>
             <div class="table-container">
                 <table id="frag-sub-table">
-                    <thead>
-                        <th>Application</th>
-                        <th>Subscription</th>
-                    </thead>
                     <tr>
                         <td>
                             <div>
@@ -757,10 +740,6 @@
             </summary>
             <div class="table-container">
                 <table id="warp-configs-table">
-                    <tr>
-                        <th>Application</th>
-                        <th>Subscription</th>
-                    </tr>
                     <tr>
                         <td>
                             <div>
@@ -878,10 +857,6 @@
             </summary>
             <div class="table-container">
                 <table id="warp-pro-configs-table">
-                    <tr>
-                        <th>Application</th>
-                        <th>Subscription</th>
-                    </tr>
                     <tr>
                         <td>
                             <div>
