Pruned legacy apps, updated UI.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -715,7 +715,7 @@
                         </td>
                         <td>
                             <button title="Display QR code"
-                                onclick="openQR('fragment', 'sing-box', 'Fragment', 'Fragment Subscription', true, false)">
+                                onclick="openQR('fragment', 'sing-box', 'Fragment', 'Fragment Subscription', true)">
                                 <span class="material-symbols-rounded">qr_code</span>
                             </button>
                             <button title="Copy subscription URL" onclick="subURL('fragment', 'sing-box', 'Fragment')">
