--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -848,6 +848,45 @@
         </details>
         <details>
             <summary>
+                <h3>Legacy
+                    <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/usage/legacy/" target="_blank"
+                        title="Help">
+                        <span class="material-symbols-rounded">info</span>
+                    </a>
+                </h3>
+            </summary>
+            <div class="table-container">
+                <table id="legacy-configs-table">
+                    <tr>
+                        <td>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Old v2rayNG</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Old v2rayN</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Old Clients</span>
+                            </div>
+                        </td>
+                        <td>
+                            <button title="Display QR code"
+                                onclick="openQR('legacy', 'xray', 'Legacy', 'Legacy Subscription')">
+                                <span class="material-symbols-rounded">qr_code</span>
+                            </button>
+                            <button title="Copy subscription URL" onclick="subURL('legacy', 'xray', 'Legacy')">
+                                <span class="material-symbols-rounded">content_copy</span>
+                            </button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </details>
+        <details>
+            <summary>
                 <h3>Warp PRO
                     <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/usage/warp-pro/" target="_blank"
                         title="Help">
