NAT64 panel bug fix, Release v3.5.6

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -41,9 +41,7 @@
                     <div class="form-control">
                         <label for="localDNS">🏚️ Local DNS</label>
                         <div>
-                            <input type="text" id="localDNS" name="localDNS"
-                                pattern="^(localhost|(?:\d{1,3}\.){3}\d{1,3})$"
-                                title="Please enter a valid DNS IP Address!" required>
+                            <input type="text" id="localDNS" name="localDNS" required>
                         </div>
                     </div>
                     <div class="form-control">
