NAT64 panel bug fix, Release v3.5.6

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -312,8 +312,7 @@
                                 <label for="knockerNoiseMode">😵‍💫 Mode</label>
                                 <div>
                                     <input type="text" id="knockerNoiseMode" name="knockerNoiseMode"
-                                        pattern="^(none|quic|random|[0-9A-Fa-f]+)$"
-                                        title="Enter 'none', 'quic', 'random', or any HEX string like 'ee0000000108aaaa'"
+                                        title="Fill in 'none', 'quic', 'random', or any HEX string like 'ee0000000108aaaa'"
                                         required>
                                 </div>
                             </div>
