--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -580,10 +580,6 @@
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>Streisand</span>
                             </div>
-                            <div>
-                                <span class="material-symbols-rounded">verified</span>
-                                <span>Happ</span>
-                            </div>
                         </td>
                         <td>
                             <button title="Display QR code"
@@ -592,6 +588,9 @@
                             </button>
                             <button title="Copy subscription URL" onclick="subURL('normal', 'xray', 'Normal')">
                                 <span class="material-symbols-rounded">content_copy</span>
+                            </button>
+                            <button title="Download config" onclick="dlURL('normal', 'xray')">
+                                <span class="material-symbols-rounded">download</span>
                             </button>
                         </td>
                     </tr>
@@ -691,10 +690,6 @@
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>Streisand</span>
                             </div>
-                            <div>
-                                <span class="material-symbols-rounded">verified</span>
-                                <span>Happ</span>
-                            </div>
                         </td>
                         <td>
                             <button title="Display QR code"
@@ -703,6 +698,9 @@
                             </button>
                             <button title="Copy subscription URL" onclick="subURL('fragment', 'xray', 'Fragment')">
                                 <span class="material-symbols-rounded">content_copy</span>
+                            </button>
+                            <button title="Download config" onclick="dlURL('fragment', 'xray')">
+                                <span class="material-symbols-rounded">download</span>
                             </button>
                         </td>
                     </tr>
@@ -758,10 +756,6 @@
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>Streisand</span>
                             </div>
-                            <div>
-                                <span class="material-symbols-rounded">verified</span>
-                                <span>Happ</span>
-                            </div>
                         </td>
                         <td>
                             <button title="Display QR code"
@@ -770,6 +764,9 @@
                             </button>
                             <button title="Copy subscription URL" onclick="subURL('warp', 'xray', 'Warp')">
                                 <span class="material-symbols-rounded">content_copy</span>
+                            </button>
+                            <button title="Download config" onclick="dlURL('warp', 'xray')">
+                                <span class="material-symbols-rounded">download</span>
                             </button>
                         </td>
                     </tr>
@@ -875,10 +872,6 @@
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>Streisand</span>
                             </div>
-                            <div>
-                                <span class="material-symbols-rounded">verified</span>
-                                <span>Happ</span>
-                            </div>
                         </td>
                         <td>
                             <button title="Display QR code"
@@ -887,6 +880,9 @@
                             </button>
                             <button title="Copy subscription URL" onclick="subURL('warp-pro', 'xray', 'Warp Pro')">
                                 <span class="material-symbols-rounded">content_copy</span>
+                            </button>
+                            <button title="Download config" onclick="dlURL('warp-pro', 'xray')">
+                                <span class="material-symbols-rounded">download</span>
                             </button>
                         </td>
                     </tr>
@@ -909,6 +905,9 @@
                             <button title="Copy subscription URL"
                                 onclick="subURL('warp-pro', 'xray-knocker', 'Warp Pro')">
                                 <span class="material-symbols-rounded">content_copy</span>
+                            </button>
+                            <button title="Download config" onclick="dlURL('warp-pro', 'xray-knocker')">
+                                <span class="material-symbols-rounded">download</span>
                             </button>
                         </td>
                     </tr>
