Full TS rewrite, extended chain protocols, revised build process.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -132,6 +132,15 @@
                             <input type="number" id="bestVLTRInterval" name="bestVLTRInterval" min="10" max="90">
                         </div>
                     </div>
+                    <div class="form-control">
+                        <label for="enableTFO">⏩ TCP Fast Open</label>
+                        <div>
+                            <select id="enableTFO" name="enableTFO">
+                                <option value="true">Enabled</option>
+                                <option value="false">Disabled</option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="container">
                         <div class="section">
                             <h4><span class="material-symbols-rounded">tune</span> Proxy IP</h4>
